# welkin

./: CMakeLists.txt
cmake/: welkin_add_layer.cmake
src/: CMakeLists.txt  allocator.cpp  allocator.h  layer.h  loss.h  platform.h.in  tensor.h
src/common/: common.h
src/core/: CMakeLists.txt  allocator.cpp  allocator.h  context.h  device.cpp  device.h  net.h  operator.h  tensor.cpp
src/layer/: fullconnect.cpp  fullconnect.h  sigmoid.h
src/operators/: CMakeLists.txt  sigmoid.cpp  sigmoid.h
src/test/: CMakeLists.txt
src/utils/: CMakeLists.txt  exception.h
tests/: test_tools.cpp  testutil.h
